added uploads directory

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE = beautyio
 DATABSE_HOST = localhost
 DATABASE_USER = beautyio
-DATABASE_PASSWORD = SeniorDesign1$
+DATABASE_PASSWORD = CODSNIPER26$
 JWT_SECRET = mysupersecretpassword
 JWT_EXPIRES_IN = 90d
 JWT_COOKIE_EXPIRES = 90
