--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.6"
   }
 }
